# squite

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  jakefile.toml
.github/workflows/: bundle.yaml  publish.yaml  test.yaml
beta/: package.json
beta/src-tauri/: Cargo.toml  tauri.conf.json
beta/src-tauri/src/: lib.rs
pages/: index.html  styles.css
scripts/: version_bump.py
src/: dbops.rs  main.rs
testfiles/: schema.sql  seed.sql  test.db
testfiles/modifications/: modify.db  schema.sql  seed.sql
