[package]
name = "squite"
version = "0.1.1"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/AstraBert/squite"
description = "A UI for SQLite databases, written in Rust"
keywords = ["sqlite", "egui", "desktop-app", "ui"]

[dependencies]
eframe = { version = "0.33.3", features = ["default"] }
egui_extras = { version = "0.33.3", features = ["default", "image"] }
indexmap = "2.13.0"
rusqlite = { version = "0.38.0", features = ["serde_json"] }
serde_json = "1.0.149"
